--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-vue": "^2.23.1",
     "vue": "^2.7.7"
   },
   "devDependencies": {
