--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
-    "bootstrap-vue": "^2.23.1",
+    "jquery": "^3.7.0",
+    "popper.js": "^1.16.1",
     "vue": "^2.7.7"
   },
   "devDependencies": {
