--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap-vue": "^2.23.1",
     "jquery": "^3.7.0",
     "popper.js": "^1.16.1",
-    "vue": "^2.7.7"
+    "vue": "^2.7.7",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^2.0.0",
