--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
+    "dotenv": "^16.3.1",
     "jquery": "^3.7.0",
     "popper.js": "^1.16.1",
     "vue": "^2.7.7",
