--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "dedalo-ax": "^1.0.15",
     "vue": "^2.7.7",
     "vue-router": "^3.5.3"
   },
