--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bootstrap": "^5.3.0",
     "dedalo-ax": "^1.0.15",
     "vue": "^2.7.7",
-    "vue-router": "^3.5.3"
+    "vue-router": "^3.5.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^2.0.0",
